Initial commit - modifications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=${MIKI_ENV:jdbc:postgresql://localhost:5432/postgres}
 spring.datasource.username=user
 spring.datasource.password=S3cret
 
@@ -6,3 +6,4 @@ demo.asnible.ip=0.0.0.0
 demo.asnible.port=22
 demo.asnible.username=user
 demo.asnible.password=S3cret
+demo.asnible.timeout=10
